--- a/src/component/popularGigs/popularGigs.scss
+++ b/src/component/popularGigs/popularGigs.scss
@@ -1,7 +1,7 @@
 .PopularGigsMainDiv {
     padding-left: 25px;
     .popularGigCard {
-        background-color: #F7F7F7;
+        background-color: #FCFCFC;
         min-height: 50px;
         border-radius: 10px;
         margin: 6px 0px;
