--- a/src/component/popularVenues/popularVenues.scss
+++ b/src/component/popularVenues/popularVenues.scss
@@ -1,7 +1,7 @@
 .PopularVenuesMainDiv {
     padding-left: 25px;
     .popularVenuesCard {
-        // background-color: #F7F7F7;
+        // background-color: #FCFCFC;
         min-height: 50px;
         border-radius: 10px;
         overflow: hidden;
