--- a/src/component/discoverGigs/discoverGigs.scss
+++ b/src/component/discoverGigs/discoverGigs.scss
@@ -1,6 +1,6 @@
 .discoverGigsMainDiv {
     .bG-grey {
-        background-color: #f7f7f7;
+        background-color: #fcfcfc;
     }
     .carousalContianer {
         height: 260px;
@@ -8,11 +8,11 @@
         border-radius: 10px;
         overflow: hidden;
         .carousalContentContainer {
-            width: 68%;
+            width: 60%;
             position: relative;
             .skewDIv {
                 position: absolute;
-                background: #f7f7f7;
+                background: #fcfcfc;
                 top: 0px;
                 z-index: 55555555;
                 width: 80px;
@@ -52,5 +52,32 @@
             background-color: black;
             width: 50%;
         }
+    }
+    .activeDotmain {
+        width: 30px;
+        height: 30px;
+        transition: 0.6s;
+    }
+    .activeDot {
+        background-color: #333;
+        width: 5px;
+        transition: 0.6s;
+        height: 5px;
+        border-radius: 50%;
+    }
+    .slick-active {
+        .activeDotmain {
+            margin-left: -17px;
+        }
+        .activeDot {
+            background-color: #fede57;
+            width: 40px;
+            height: 7px;
+            border-radius: 32px !important;
+        }
+    }
+    .slick-dots{
+        text-align: unset !important;
+        padding-left: 40px !important;
     }
 }
