--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -18,7 +18,7 @@
         .roundedInput{
             border-radius: 20px;
             width: 70%;
-            background-color: #F7F7F7;
+            background-color: #FCFCFC;
             border: none;
             padding: 0px 20px;
             &::placeholder{
