--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -1,59 +1,72 @@
-.HeaderPage{
+.HeaderPage {
     padding: 10px 0px;
-    .headerMainDiv{
+    .headerMainDiv {
         display: flex;
     }
-    .headerSection1{
+    .headerSection1 {
         width: 15%;
         text-align: center;
         // h1{
         //     font-weight: 700;
         // }
     }
-    .headerSection2{
+    .headerSection2 {
         width: 85%;
         display: flex;
         align-items: center;
         justify-content: space-around;
-        .roundedInput{
+        .roundedInput {
             border-radius: 20px;
-            width: 70%;
-            background-color: #FCFCFC;
+            width: 100%;
+            background-color: #fcfcfc;
             border: none;
             padding: 0px 20px;
-            &::placeholder{
+            &::placeholder {
                 color: #00000026;
                 font-weight: 600;
-                font-size: 14px ;
+                font-size: 14px;
             }
         }
-        .buttonAddGig{
+        .buttonAddGig {
             border-radius: 20px;
-            font-weight: 600;
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 18px;
+            text-transform: capitalize;
             display: flex;
-            font-size: 14px;
             align-items: center;
             justify-content: space-between;
-            svg{
-                height: 13px;
+            svg {
+                height: 12px;
                 margin-right: 5px;
             }
         }
-        .dropdown{
-            width: 12%; 
-            button{
+        .dropdown {
+            width: 46%;
+            button {
                 width: 100%;
                 align-items: center;
                 justify-content: space-between;
                 background-color: transparent !important;
                 border-color: transparent !important;
-                .profileDiv{
+                .profileDiv {
                     height: 30px;
                     width: 30px;
                     background: black;
                     border-radius: 50%;
                 }
             }
+            .dropdown-item {
+                &:hover {
+                    background-color: #fede57;
+                }
+            }
+        }
+    }
+    #dropdownMenuButton {
+        &:focus,
+        &:active {
+            box-shadow: none;
         }
     }
 }
