--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,7 @@
   .dropdown-menu {
     display: block;
     font-size: 12px;
-    min-width: 9rem;
+    min-width: 100%;
     .dropdown-item {
       display: block;
       width: 100%;
