--- a/src/component/tableList/tablelist.scss
+++ b/src/component/tableList/tablelist.scss
@@ -1,6 +1,6 @@
 .tableListMainDiv {
     .bgGrey {
-        background-color: #FCFCFC;
+        background-color: #fcfcfc;
         border-radius: 5px;
         margin-bottom: 5px;
         // padding: 20px 0px;
@@ -61,8 +61,8 @@
         justify-content: space-around;
         .roundButton {
             padding: 0px;
-            height: 30px;
-            width: 30px;
+            height: 35px;
+            width: 35px;
             border-radius: 50%;
             display: flex;
             justify-content: center;
@@ -71,7 +71,7 @@
                 height: 14px;
             }
         }
-        .buyBtn{
+        .buyBtn {
             padding: 6px 12px;
             font-size: 12px;
             font-weight: 700;
