--- a/src/component/popularArtist/popularArtist.scss
+++ b/src/component/popularArtist/popularArtist.scss
@@ -1,5 +1,8 @@
 .PopularArtistMainDiv {
     padding-left: 25px;
+    @media screen and (max-width: 600px){
+        padding: 0px;
+    }
     .popularArtistCard {
         // background-color: #FCFCFC;
         min-height: 50px;
