--- a/src/component/discoverGigs/discoverGigs.scss
+++ b/src/component/discoverGigs/discoverGigs.scss
@@ -10,6 +10,9 @@
         .carousalContentContainer {
             width: 60%;
             position: relative;
+            @media screen and (max-width: 600px){
+                width: 75%;
+            }
             .skewDIv {
                 position: absolute;
                 background: #fcfcfc;
@@ -51,6 +54,11 @@
             height: 260px;
             background-color: black;
             width: 50%;
+            @media screen and (max-width:  600px) {
+                height: 260px;
+                background-color: black;
+                width: 25%;
+            }
         }
     }
     .activeDotmain {
@@ -76,7 +84,7 @@
             border-radius: 32px !important;
         }
     }
-    .slick-dots{
+    .slick-dots {
         text-align: unset !important;
         padding-left: 40px !important;
     }
