--- a/src/component/gigGuide/gigGuide.scss
+++ b/src/component/gigGuide/gigGuide.scss
@@ -1,9 +1,24 @@
 .gigGuideContainer {
     .gigCardMain {
         width: 35%;
+        @media screen and (max-width: 768px){
+            width: 80%;
+        }
+        @media screen and (max-width: 600px){
+        width: 100%;
     }
+}
     .sp-between {
-        justify-content: space-between;
+        @media screen and (max-width: 768px){
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        @media screen and (max-width: 600px){
+            flex-direction: column;
+            padding: 0px 20px;
+        }
+        
     }
     .f-center {
         align-items: center;
@@ -78,6 +93,12 @@
     }
     .descriptionMain {
         width: 63%;
+        @media screen and (max-width: 768px){
+            width: 100%;
+        }
+        @media screen and (max-width: 600px){
+            width: 100%;
+        }
         .paraSection {
             min-height: 180px;
             padding: 15px;
