--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -1,11 +1,21 @@
 .HeaderPage {
     padding: 10px 0px;
+
+    box-shadow: 0px 0px 11px -7px black;
+    position: sticky;
+    top: 0;
+    background: white;
+    z-index: 999;
+
     .headerMainDiv {
         display: flex;
     }
     .headerSection1 {
         width: 15%;
         text-align: center;
+        @media screen and (max-width: 600px) {
+            width: auto !important;
+        }
         // h1{
         //     font-weight: 700;
         // }
@@ -15,6 +25,15 @@
         display: flex;
         align-items: center;
         justify-content: space-around;
+        @media screen and (max-width: 600px) {
+            justify-content: center;
+            width: 100%;
+            padding-top: 20px;
+            // display: flex !important;
+            &.droptDownMob {
+                padding: 0px;
+            }
+        }
         .roundedInput {
             border-radius: 20px;
             width: 100%;
@@ -25,6 +44,9 @@
                 color: #00000026;
                 font-weight: 600;
                 font-size: 14px;
+            }
+            @media screen and (max-width: 600) {
+                box-shadow: 0px 0px 13px -8px #00000073;
             }
         }
         .buttonAddGig {
@@ -69,4 +91,15 @@
             box-shadow: none;
         }
     }
+    .drawerIcon {
+        font-size: 22px;
+        color: #5f5d5d;
+        margin-right: 20px;
+    }
+}
+.ant-drawer {
+    z-index: 9999 !important;
+}
+.headerdrawerButn{
+    display: flex !important;
 }
