--- a/src/component/menu/menu.scss
+++ b/src/component/menu/menu.scss
@@ -1,24 +1,46 @@
-.MenuMainDiv{
+.MenuMainDiv {
     width: 20%;
     padding: 0px 25px;
-    .heading{
+    .heading {
         font-weight: 700;
         color: #00000026;
     }
-    .list{
+    .list {
         display: flex;
         flex-direction: column;
-        .buttonRound{
+        .buttonRound {
             border-radius: 20px;
             font-size: 13px;
             font-weight: 600;
             display: flex;
             align-items: center;
             padding-left: 20px;
-            svg{
+            svg {
                 height: 13px;
                 margin-right: 15px;
             }
         }
     }
+}
+.hidePc {
+    display: none !important;
+    @media screen and (max-width: 600px) {
+        display: block !important;
+        &.headerdrawerButn{
+            display: flex !important;
+        }
+    }
+}
+.hideMobile {
+    @media screen and (max-width: 600px) {
+        display: none  !important;
+    }
+}
+.hideTable{
+    @media screen and (max-width: 768px) {
+        display: none  !important;
+    }
+}
+.mobDrawerMenu{
+    width: 100% !important;
 }
