--- a/src/component/tableList/tablelist.scss
+++ b/src/component/tableList/tablelist.scss
@@ -1,4 +1,5 @@
 .tableListMainDiv {
+    margin-top: 11px;
     .bgGrey {
         background-color: #fcfcfc;
         border-radius: 5px;
@@ -7,11 +8,22 @@
         overflow: hidden;
     }
     .div1 {
-        width: 10%;
+        width: 70px;
+        height: 70px;
+        padding: 11px;
+        background-position: center;
+        background-size: cover;
+        @media screen and (max-width: 1152px) {
+            width: 50px;
+            height: 50px;
+        }
+        // @media screen and (max-width: 600px) {
+        //     width: ;
+        // }
     }
     .yellowBG {
         background-color: #fede57;
-        height: auto;
+        border-radius: 3px 0px 0px 3px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -20,32 +32,87 @@
             margin: 0;
             font-size: 22px;
             font-weight: 600;
+            font-family: Poppins;
+            font-style: normal;
+            font-weight: 600;
+            color: #333333;
+            @media screen and (max-width: 1152px) {
+                font-size: 12px;
+                line-height: 18px;
+                text-align: center;
+                line-height: 18px;
+            }
         }
         .gigMonth {
             margin: 0;
             margin-top: -5px;
             font-size: 14px;
             font-weight: 600;
+            font-family: Poppins;
+            font-style: normal;
+            font-weight: 600;
+            color: #333333;
+            @media screen and (max-width: 1152px) {
+                font-size: 12px;
+                line-height: 18px;
+                text-align: center;
+            }
         }
     }
     .div2 {
         width: 60%;
         padding: 5px 20px;
+        @media screen and (max-width: 768px) {
+            margin-bottom: 20px;
+            width: 80%;
+        }
+        @media screen and (max-width: 600px) {
+            width: calc(100% - 70px);
+        }
         .name {
             font-weight: 600;
             margin-bottom: 2px;
+            font-family: Poppins;
+            font-style: normal;
+            font-weight: 500;
+            @media screen and (max-width: 1152px) {
+                font-size: 10px;
+                line-height: 15px;
+                /* identical to box height */
+
+                color: #333333;
+            }
         }
         .smallText {
             font-size: 10px;
             margin: 0;
             // font-weight: 600;
             margin-top: 2px;
+            font-family: Poppins;
+            font-style: normal;
+            font-weight: 500;
+            @media screen and (max-width: 1152px) {
+                font-size: 5px;
+                line-height: 7px;
+
+                color: #666666;
+            }
         }
         .midText {
             font-size: 12px;
             font-weight: 600;
             text-transform: uppercase;
             margin: 0;
+            font-family: Poppins;
+            font-style: normal;
+            font-weight: 600;
+            @media screen and (max-width: 1152px) {
+                font-size: 7px;
+                line-height: 10px;
+                /* identical to box height */
+
+                color: #333333;
+            }
         }
         .BD-top {
             border-top: 2px solid #fede57;
@@ -59,6 +126,14 @@
         display: flex;
         align-items: center;
         justify-content: space-around;
+        @media screen and (max-width: 768px) {
+            width: 60%;
+            margin-bottom: 20px;
+
+        }
+        @media screen and (max-width: 600px) {
+            width: 60%;
+        }
         .roundButton {
             padding: 0px;
             height: 35px;
@@ -67,8 +142,16 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            position: relative;
             svg {
-                height: 14px;
+                height: 22px;
+            }
+            &.attachedIcon {
+                svg {
+                    position: absolute;
+                    top: 9px;
+                    font-size: 22px;
+                }
             }
         }
         .buyBtn {
@@ -77,6 +160,24 @@
             font-weight: 700;
             text-transform: uppercase;
             border-radius: 20px;
+            font-family: Poppins;
+            font-style: normal;
+            font-weight: 600;
+            @media screen and (max-width: 1152px) {
+                font-size: 8px;
+                line-height: 12px;
+                /* identical to box height */
+
+                text-transform: uppercase;
+
+                color: #333333;
+                width: 82px;
+                height: 35px;
+            }
+            &.artist {
+                width: 82px;
+                height: 26px;
+            }
         }
     }
 }
